--- a/client/user/public/index.html
+++ b/client/user/public/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
   	<meta http-equiv="content-type" content="text/html; charset=UTF8">
-    <title>iseeq admin</title>
+    <title>iseeq chart</title>
   </head>
   <body>
     <div id='root'></div>
     <script src="bundle.js"></script>
+    <script src="./ext/d3.v3.min.js"></script>
   <script type="text/javascript" src="bundle.js"></script></body>
 </html>
