--- a/client/user/public/index.html
+++ b/client/user/public/index.html
@@ -7,6 +7,6 @@
   <body>
     <div id='root'></div>
     <script src="bundle.js"></script>
-    <script src="./ext/d3.v3.min.js"></script>
+    <!-- <script src="./ext/d3.v3.min.js"></script> -->
   <script type="text/javascript" src="bundle.js"></script></body>
 </html>
