--- a/client/user/src/index.html
+++ b/client/user/src/index.html
@@ -7,6 +7,6 @@
   <body>
     <div id='root'></div>
     <script src="bundle.js"></script>
-    <script src="./ext/d3.v3.min.js"></script>
+    <!-- <script src="./ext/d3.v3.min.js"></script> -->
   </body>
 </html>
