--- a/client/user/public/index.html
+++ b/client/user/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<meta http-equiv="content-type" content="text/html; charset=UTF8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF8">
+    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="./style/img/iseeqfav.png">
     <title>iseeq chart</title>
   </head>
   <body>
